[tool.poetry]
name = "dockerfiletographviz"
version = "0.1.0"
description = "Python package for converting Dockerfile into input for Graphviz"
authors = ["HaeckelK <HaeckelK.github@gmail.com>"]
license = "MIT"

[tool.poetry.urls]
homepage = "https://github.com/HaeckelK/dockfiletographviz"
documentation = "https://github.com/HaeckelK/dockfiletographviz"
repository = "https://github.com/HaeckelK/dockfiletographviz"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = "^6.4.2"
mypy = "^0.971"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
